apps/workloads/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-ui
spec:
  selector:
    app: overseerr
  ports:
    - name: web-ui
      port: 5055
