apps/workloads/media/overseerr/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: overseerr-policy
spec:
  endpointSelector:
    matchLabels:
      app: overseerr
  # ----=== Ingress ===----
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: home-assistant
            k8s:io.kubernetes.pod.namespace: iot
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"
  # ----=== Egress ===----
  egress:
    # === Allow access to services ===
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: plex-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-ui
            namespace: media
        - k8sService:
            serviceName: radarr-ui
            namespace: media
        - k8sService:
            serviceName: tautulli-ui
            namespace: media
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: ntfy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # === Allow access to external for metadata ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
